# dodi_assessment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
cinema/: .env.example  DockerFile  celerybeat-schedule.dir  db.sqlite3  docker-compose.yml  manage.py  pytest.ini  requirements.txt
cinema/.github/workflows/: ci.yml
cinema/api/: models.py  schemas.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
cinema/api/migrations/: 0001_initial.py  0002_alter_movie_options.py  0002_delete_protagonists.py  0003_alter_movie_name.py
cinema/cinema/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
cinema/movies/: api.py  apps.py  models.py  schemas.py  tasks.py  tests.py
cinema/movies/migrations/: 0001_initial.py  0002_alter_movie_table.py
