[tool.poetry]
name = "dodi-assessment"
version = "0.1.0"
description = ""
authors = ["oscaroguledo <122152636+oscaroguledo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.3.6"
Django = "^5.0.3"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
pytest = "^8.1.1"
django-ninja = "^1.1.0"
redis = "^5.0.3"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
requests-futures = "^1.0.1"
django-environ = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
